@@ -863,11 +863,9 @@ if test "x$ac_cv_sys_file_offset_bits" = x || echo "$ac_cv_sys_file_offset_bits"
 	dnl if it has non-numeric chars or is empty... ignore...
 	LARGEFILE_BITS=
 	LARGEFILE_SUFFIX=
-	LARGEFILE_SWITCH=0
 else
 	LARGEFILE_BITS="$ac_cv_sys_file_offset_bits"
 	LARGEFILE_SUFFIX="_$ac_cv_sys_file_offset_bits"
-	LARGEFILE_SWITCH=1
 fi
 
 dnl Insert the function name redefinitions and export symbols as needed.
